# mobius-tform-app

./: LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.tsx  app.module.css  coord.ts  main.tsx  root.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  api_tests.rs  data.rs  lib.rs  main.rs  math.rs  math_tests.rs  model.rs  model_tests.rs
src/components/: AlertDisplay.tsx  CheckBox.tsx  SlideToggle.tsx  components.module.css
src/display/: GraphCanvas.tsx  MobiusGraph.tsx  MovablePoint.tsx  graph.module.css
src/hooks/: useElementExtent.ts  useGlobalState.ts
src/model/: backend.ts  coord.ts  geometry.ts
src/sidebar/: ControlPointDisplay.tsx  CurveFamilyToggle.tsx  ErrorDisplay.tsx  Sidebar.tsx  ThemeToggle.tsx  sidebar.module.css
src/theme/: ThemeProvider.tsx  schema.ts
src/theme/themes/: dark.json  light.json
