[package]
name = "mobius-app"
version = "0.0.0"
description = "An app for visualizing Möbius transformations"
authors = ["Jason Luo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = { version = "0.33.0", features = ["serde-serialize"] }
approx = { version = "0.5.1", features = ["num-complex"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
paste = "1.0.15" # used to generate unique test case names
